[103. 二叉树的锯齿形层]次遍历|BFS

--- a/每周的题解/第五周.md
+++ b/每周的题解/第五周.md
@@ -1,15 +1,11 @@
 `okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周一更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
 如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
 
-
-
 这是第五周的刷题记录与题解分享
 
 ---
 
 之前考试月然后又偷懒了几天..
-
-
 
 ## [56. 合并区间](https://leetcode-cn.com/problems/merge-intervals)|数组|排序
 
@@ -57,17 +53,15 @@ var merge = function (intervals) {
 };
 ```
 
-
-
 ## [718. 最长重复子数组](https://leetcode-cn.com/problems/maximum-length-of-repeated-subarray)|dp
 
 ### 题目描述
 
 > ```js
 > 给两个整数数组  A  和  B ，返回两个数组中公共的、长度最长的子数组的长度。
-> 
+>
 > 示例 1:
-> 
+>
 > 输入:
 > A: [1,2,3,2,1]
 > B: [3,2,1,4,7]
@@ -75,7 +69,7 @@ var merge = function (intervals) {
 > 解释:
 > 长度最长的公共子数组是 [3, 2, 1]。
 > 说明:
-> 
+>
 > 1 <= len(A), len(B) <= 1000
 > 0 <= A[i], B[i] < 100
 > ```
@@ -88,25 +82,21 @@ var merge = function (intervals) {
 - 最长
 - 子数组 **（子数组、字串是连续的喔**，子序列是保证相对顺序，可以删掉其中的一些
 
-求解两个东西之间的最大最小  可以马上联想到 动态规划 dp
+求解两个东西之间的最大最小 可以马上联想到 动态规划 dp
 
 酱紫定义一下先：
 
-`dp[i][j]` 表示 `A[0-i] 和 B[0-j]` 公共、最长、子序列  的 **长度**
+`dp[i][j]` 表示 `A[0-i] 和 B[0-j]` 公共、最长、子序列 的 **长度**
 
-首先肯定要双层循环  i、j，走完 全部的A、B 才能拿到答案
+首先肯定要双层循环 i、j，走完 全部的 A、B 才能拿到答案
 
 循环中判断 ：
 
 - `A[i] === B[j]` => `dp[i][j] = dp[i-1][j-1] + 1 `
-- `A[i] !== B[j]` => 就是 0  初始化的时候就是了 ，所以实际代码中可以不管
+- `A[i] !== B[j]` => 就是 0 初始化的时候就是了 ，所以实际代码中可以不管
   - ans 在每一步中都要取最大的
 
-
-
 时间和空间复杂度都为 O(m+n)，m、n 分别为 A、B 的大小
-
-
 
 ### 代码
 
@@ -199,9 +189,7 @@ int[] shuffle() 返回数组随机打乱后的结果
 
 所有排列等可能，也就是所有元素出现在某个位置的概率相等
 
-- 对于下标为 0位置，从 `[0, n - 1][0,n−1] `随机一个位置进行交换，共有 n 种选择；下标为 1 的位置，从 `[1, n - 1][1,n−1] `随机一个位置进行交换，共有 n - 1  种选择 
-
-
+- 对于下标为 0 位置，从 `[0, n - 1][0,n−1] `随机一个位置进行交换，共有 n 种选择；下标为 1 的位置，从 `[1, n - 1][1,n−1] `随机一个位置进行交换，共有 n - 1 种选择
 
 ### 代码
 
@@ -245,3 +233,64 @@ Solution.prototype.shuffle = function () {
  */
 ```
 
+## [103. 二叉树的锯齿形层](https://leetcode-cn.com/problems/binary-tree-zigzag-level-order-traversal)次遍历|BFS
+
+### 题目描述
+
+```
+给你二叉树的根节点 root ，返回其节点值的 锯齿形层序遍历 。（即先从左往右，再从右往左进行下一层遍历，以此类推，层与层之间交替进行）。
+```
+
+### 解题思路
+
+借助队列，一层一层地入列，
+
+用 NULL 作为一层结束的标志
+
+
+### 代码
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[][]}
+ */
+var zigzagLevelOrder = function (root) {
+	if (!root) return [];
+	const ans = []; //最终结果
+	let dFlag = true; //遍历方向
+	let levelNodes = []; //存储某一层
+	const que = [root, null]; //用于 BFS
+	while (que.length > 0) {
+		const t = que.shift();
+		if (t) {
+			levelNodes.push(t.val);
+			if (t.left) {
+				que.push(t.left);
+			}
+			if (t.right) {
+				que.push(t.right);
+			}
+		} else {
+			if (!dFlag) {
+				levelNodes = levelNodes.reverse();
+			}
+			ans.push(levelNodes);
+			levelNodes = [];
+			dFlag = !dFlag;
+			if (que.length > 0) {
+				que.push(null);
+			}
+		}
+	}
+	return ans;
+};
+```
