[62. 不同路径]|动态规划|DP

--- a/每周的题解/第五周.md
+++ b/每周的题解/第五周.md
@@ -247,7 +247,6 @@ Solution.prototype.shuffle = function () {
 
 用 NULL 作为一层结束的标志
 
-
 ### 代码
 
 ```js
@@ -292,5 +291,48 @@ var zigzagLevelOrder = function (root) {
 		}
 	}
 	return ans;
+};
+```
+
+## [62. 不同路径](https://leetcode-cn.com/problems/unique-paths)|动态规划|DP
+
+### 题目描述
+
+```
+一个机器人位于一个 m x n 网格的左上角 （起始点在下图中标记为 “Start” ）。
+
+机器人每次只能向下或者向右移动一步。机器人试图达到网格的右下角（在下图中标记为 “Finish” ）。
+
+问总共有多少条不同的路径？
+```
+
+### 解题思路
+
+只能向下或者向右移动，所以某一个点也只会来自上面或是左边
+
+是一个典型的动态规划 dp 问题
+
+第`[i, j]`个格子的总数应该等于`[i - 1, j] + [i, j -1]`
+
+并且空间可以再度优化，因为是一行一行来的
+一层一层更新
+` dp[j] = dp[j] + dp[j - 1]`
+
+### 代码
+
+```js
+/**
+ * @param {number} m
+ * @param {number} n
+ * @return {number}
+ */
+var uniquePaths = function (m, n) {
+	const dp = Array(n).fill(1);
+	for (let i = 1; i < m; i++) {
+		for (let j = 1; j < n; j++) {
+			dp[j] = dp[j] + dp[j - 1];
+		}
+	}
+	return dp[n - 1];
 };
 ```
