[144. 二叉树的前序遍历]|递归|栈

--- a/每周的题解/第五周.md
+++ b/每周的题解/第五周.md
@@ -312,7 +312,7 @@ var zigzagLevelOrder = function (root) {
 
 是一个典型的动态规划 dp 问题
 
-第`[i, j]`个格子的总数应该等于`[i - 1, j] + [i, j -1]`
+第 `[i, j]`个格子的总数应该等于 `[i - 1, j] + [i, j -1]`
 
 并且空间可以再度优化，因为是一行一行来的
 一层一层更新
@@ -334,5 +334,56 @@ var uniquePaths = function (m, n) {
 		}
 	}
 	return dp[n - 1];
+};
+```
+
+## [144. 二叉树的前序遍历](https://leetcode-cn.com/problems/binary-tree-preorder-traversal)|递归|栈
+
+### 题目描述
+
+```
+给你二叉树的根节点 root ，返回它节点值的 前序 遍历。
+```
+
+### 解题思路
+
+究极二叉树遍历基础题
+
+前序遍历就是根左右的顺序
+
+- 可以递归
+  - 怎么合并结果可以思考一下
+- 也可以用栈
+  - 用栈的入栈顺序要注意一下
+
+### 代码
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var preorderTraversal = function (root) {
+	/* 
+	if (!root) return [];
+	return [root.val]
+		.concat(preorderTraversal(root.left))
+		.concat(preorderTraversal(root.right));
+  */
+	if (!root) return [];
+	const ans = [],
+		stk = [root];
+	let t = stk.pop();
+	while (t) {
+		if (t.right) {
+			stk.push(t.right);
+		}
+		if (t.left) {
+			stk.push(t.left);
+		}
+		ans.push(t.val);
+		t = stk.pop();
+	}
+	return ans;
 };
 ```
