1161. 最大层内元素和|BFS

--- a/每周的题解/第五周.md
+++ b/每周的题解/第五周.md
@@ -387,3 +387,60 @@ var preorderTraversal = function (root) {
 	return ans;
 };
 ```
+
+## 1161. 最大层内元素和|BFS
+
+### 题目描述
+
+```
+给你一个二叉树的根节点 root。设根节点位于二叉树的第 1 层，而根节点的子节点位于第 2 层，依此类推。
+
+请返回层内元素之和 最大 的那几层（可能只有一层）的层号，并返回其中 最小 的那个。
+
+
+```
+
+### 解题思路
+
+其实就是层序遍历，只不过每一层遍历完后要记录一下
+
+要维护的就是最大值以及那层的层数
+
+### 代码
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var maxLevelSum = function (root) {
+	let mxSum = -9999999,
+		ans,
+		depth = 1;
+	const q = [root];
+	while (q.length > 0) {
+		let tSum = 0;
+		let sz = q.length;
+		while (sz--) {
+			const t = q.shift();
+			if (t.left) q.push(t.left);
+			if (t.right) q.push(t.right);
+			tSum += t.val;
+		}
+		if (tSum > mxSum) {
+			mxSum = tSum;
+			ans = depth;
+		}
+		depth++;
+	}
+	return ans;
+};
+```
