--- a/每周的题解/第六周.md
+++ b/每周的题解/第六周.md
@@ -128,3 +128,74 @@ var restoreIpAddresses = function (s) {
 	return ans;
 };
 ```
+
+## 155.最小栈| 栈
+
+### 题目描述
+
+```
+设计一个支持 push ，pop ，top 操作，并能在常数时间内检索到最小元素的栈。
+
+实现 MinStack 类:
+
+MinStack() 初始化堆栈对象。
+void push(int val) 将元素val推入堆栈。
+void pop() 删除堆栈顶部的元素。
+int top() 获取堆栈顶部的元素。
+int getMin() 获取堆栈中的最小元素。
+```
+
+### 解题思路
+
+题目要求常数时间，那么自然就不能说找最小值的时候再遍历，而是在每次放东西取东西的时候都要记录好
+
+那么单单一个栈是不可能做到的，所以我们来用两个栈
+
+- 一个存放所有的元素
+- 一个专门用来记录最小值
+  - push 时，如果小于（应该是小于等于）栈顶就放进去，不然不放
+  - pop 时，判断是否就是栈顶（这里应该是 值和栈顶相等），如果是，那就要 pop 掉
+
+### 代码
+
+```js
+var MinStack = function () {
+	this.stack = [];
+	this.minStk = [];
+};
+
+/**
+ * @param {number} val
+ * @return {void}
+ */
+MinStack.prototype.push = function (val) {
+	this.stack.push(val);
+	if (this.minStk.length === 0 || val <= this.minStk[this.minStk.length - 1]) {
+		this.minStk.push(val);
+	}
+};
+
+/**
+ * @return {void}
+ */
+MinStack.prototype.pop = function () {
+	const val = this.stack.pop();
+	if (val !== void 0 && val === this.minStk[this.minStk.length - 1]) {
+		this.minStk.pop();
+	}
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.top = function () {
+	return this.stack[this.stack.length - 1];
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.getMin = function () {
+	return this.minStk[this.minStk.length - 1];
+};
+```
