105. 从前序与中序遍历序列构造二叉树|二叉树

--- a/每周的题解/第六周.md
+++ b/每周的题解/第六周.md
@@ -199,3 +199,43 @@ MinStack.prototype.getMin = function () {
 	return this.minStk[this.minStk.length - 1];
 };
 ```
+
+## 105. 从前序与中序遍历序列构造二叉树|二叉树
+
+### 题目描述
+
+```
+给定两个整数数组 preorder 和 inorder ，其中 preorder 是二叉树的先序遍历， inorder 是同一棵树的中序遍历，请构造二叉树并返回其根节点。
+```
+
+### 解题思路
+
+画图好理解
+我以前写过[C++版的题解](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/solution/105-cong-qian-xu-yu-zhong-xu-bian-li-xu-dvjad/)，图片是一样的
+
+### 代码
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {number[]} preorder
+ * @param {number[]} inorder
+ * @return {TreeNode}
+ */
+var buildTree = function (preorder, inorder) {
+	if (preorder.length === 0) return null;
+	let tmp = preorder[0];
+	let sz = inorder.indexOf(tmp); //左侧部分的长度
+	let root = new TreeNode(tmp);
+	root.left = buildTree(preorder.slice(1, sz + 1), inorder.slice(0, sz));
+	root.right = buildTree(preorder.slice(sz + 1), inorder.slice(sz + 1));
+	return root;
+};
+```
