--- a/每周的题解/第六周.md
+++ b/每周的题解/第六周.md
@@ -239,3 +239,26 @@ var buildTree = function (preorder, inorder) {
 	return root;
 };
 ```
+
+## 剑指 Offer 10- II. 青蛙跳台阶问题|DP
+
+### 题目描述
+
+```
+一只青蛙一次可以跳上1级台阶，也可以跳上2级台阶。求该青蛙跳上一个 n 级的台阶总共有多少种跳法。
+
+答案需要取模 1e9+7（1000000007），如计算初始结果为：1000000008，请返回 1。
+
+```
+
+### 解题思路
+
+一道典型的 dp 题目
+
+- `dp[i]` 表示到 第 i 个阶梯的跳法数
+- `dp[0] = dp[1] = d[2] = 1`
+- `dp[i] = dp[i - 1] + dp[i - 2]`
+
+然后发现其实只需要保存最近的两个状态 —— 两个变量就可以了，把空间优化了
+
+### 代码
