160. 相交链表|链表|哈希|双指针

--- a/每周的题解/第六周.md
+++ b/每周的题解/第六周.md
@@ -262,3 +262,85 @@ var buildTree = function (preorder, inorder) {
 然后发现其实只需要保存最近的两个状态 —— 两个变量就可以了，把空间优化了
 
 ### 代码
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var numWays = function (n) {
+	if (n <= 2) return n === 0 ? 1 : n;
+	let a = 1,
+		b = 2;
+	for (let i = 3; i <= n; i++) {
+		let t = a + b;
+		a = b;
+		b = t % 1000000007;
+	}
+	return b;
+};
+```
+
+## 160. 相交链表|链表|哈希|双指针
+
+### 题目描述
+
+```
+给你两个单链表的头节点 headA 和 headB ，请你找出并返回两个单链表相交的起始节点。如果两个链表不存在相交节点，返回 null 。
+```
+
+### 解题思路
+
+哈希法：
+遍历 A 链表，存下所有节点
+
+再遍历 B 链表，遇到存过的第一个节点就是相交节点
+
+时间和空间复杂度都是 n
+
+双指针法：
+
+- a, b 指针分别指向 A, B 这两条链表头部, 相同的速度向后移动
+- 当 a 到达链表的尾部时,重定位到 B 的头结点
+- 当 b 到达链表的尾部时,重定位到 A 的头结点。
+- a, b 指针相遇的点为相交起点，否则没有
+  时间为 n，空间为 1
+
+证明：
+设：a 为 A 头部到交点的距离，b 为 B 头部到交点的距离，c 为交点到尾部的距离
+按上面的双指着跑法：遇到交点的距离分别是 a + c + b 、 b + c + a，距离是相等的，所以相遇的地方就是交点
+
+> 这个还是有点巧妙的，看了大佬的题解才想到
+
+### 代码
+
+```js
+/**
+ * @param {ListNode} headA
+ * @param {ListNode} headB
+ * @return {ListNode}
+ */
+var getIntersectionNode = function (headA, headB) {
+	/* 哈希法
+	const st = new Set();
+	while (headA !== null) {
+		st.add(headA);
+		headA = headA.next;
+	}
+	while (headB !== null) {
+		if (st.has(headB)) return headB;
+		headB = headB.next;
+	}
+	return null;
+	 */
+
+	/* 双指针法 */
+	let a = headA,
+		b = headB;
+	while (a !== b) {
+		a = a === null ? headB : a.next;
+		b = b === null ? headA : b.next;
+	}
+	return b;
+};
+```
