--- a/每周的题解/第六周.md
+++ b/每周的题解/第六周.md
@@ -344,3 +344,49 @@ var getIntersectionNode = function (headA, headB) {
 	return b;
 };
 ```
+
+## 64.最小路径和|DP
+
+### 题目描述
+
+```
+给定一个包含非负整数的 m x n 网格 grid ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
+
+说明：每次只能向下或者向右移动一步。
+```
+
+### 解题思路
+
+每次只能向下或者向右 —— 经典 DP
+每个点只能来自上面或者左边
+
+- `dp[i][j]` 表示到该点的最短路径和
+- `dp[i][j] = Math.min(dp[i - 1][j] + grid[i][j], dp[i][j - 1] + grid[i][j])`
+- 就是第一行和第一列要初始化一下
+
+grid 作 dp 数组就可以了
+
+### 代码
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var minPathSum = function (grid) {
+	let row = grid.length,
+		col = grid[0].length;
+	for (let i = 1; i < row; i++) {
+		grid[i][0] += grid[i - 1][0];
+	}
+	for (let j = 1; j < col; j++) {
+		grid[0][j] += grid[0][j - 1];
+	}
+	for (let i = 1; i < row; i++) {
+		for (let j = 1; j < col; j++) {
+			grid[i][j] += Math.min(grid[i - 1][j], grid[i][j - 1]);
+		}
+	}
+	return grid[row - 1][col - 1];
+};
+```
