--- a/每周的题解/第六周.md
+++ b/每周的题解/第六周.md
@@ -390,3 +390,40 @@ var minPathSum = function (grid) {
 	return grid[row - 1][col - 1];
 };
 ```
+
+## 14. 最长公共前缀|字符串
+
+### 题目描述
+
+```
+编写一个函数来查找字符串数组中的最长公共前缀。
+
+如果不存在公共前缀，返回空字符串 ""。
+```
+
+### 解题思路
+
+将 ans 初始化为第一个字符串，遍历第二个字符串，依次与 ans 比较
+时间复杂度为 m + n,m、n 为两个字符串的长度
+
+### 代码
+
+```js
+/**
+ * @param {string[]} strs
+ * @return {string}
+ */
+var longestCommonPrefix = function (strs) {
+	if (strs.length === 0) return '';
+	let ans = strs[0];
+	for (let i = 1; i < strs.length; i++) {
+		let j = 0;
+		for (; j < ans.length; j++) {
+			if (ans[j] != strs[i][j]) break;
+		}
+		ans = ans.substring(0, j);
+		if (ans === '') return ans;
+	}
+	return ans;
+};
+```
