43.字符串相乘|字符串|模拟|数学

--- a/每周的题解/第六周.md
+++ b/每周的题解/第六周.md
@@ -427,3 +427,48 @@ var longestCommonPrefix = function (strs) {
 	return ans;
 };
 ```
+
+## 43.字符串相乘|字符串|模拟|数学
+
+### 题目描述
+
+```
+给定两个以字符串形式表示的非负整数 num1 和 num2，返回 num1 和 num2 的乘积，它们的乘积也表示为字符串形式。
+
+注意：不能使用任何内置的 BigInteger 库或直接将输入转换为整数。
+```
+
+### 解题思路
+
+当相乘的两个数过大时，语言提供的数字类型可能就会溢出
+当然，像 BigInteger 这些就是为了大数服务的就不会
+
+也就是说，我们就是模拟大数运算
+
+模拟数学中的竖式计算就好了
+从低位开始计算，注意哪位和哪位相乘的结果在结果数组中对应的位置
+注意处理进位那些~
+
+### 代码
+
+```js
+var multiply = function (num1, num2) {
+	if (num1 === '0' || num2 === '0') return '0';
+	let l1 = num1.length,
+		l2 = num2.length,
+		res = new Array(l1 + l2).fill(0);
+	for (let i = l1 - 1; i >= 0; i--) {
+		for (let j = l2 - 1; j >= 0; j--) {
+			const mul = num1[i] * num2[j];
+			const up = i + j,
+				cur = i + j + 1;
+			const sum = mul + res[cur],
+				carry = Math.floor(sum / 10);
+			res[cur] = sum % 10;
+			res[up] += carry;
+		}
+	}
+	while (res[0] === 0) res.shift();
+	return res.join('');
+};
+```
