剑指 Offer 62. 圆圈中最后剩下的数字|约瑟夫环

--- a/每周的题解/第七周.md
+++ b/每周的题解/第七周.md
@@ -45,3 +45,44 @@ var rotate = function (matrix) {
 	}
 };
 ```
+
+## 剑指 Offer 62. 圆圈中最后剩下的数字|约瑟夫环
+
+### 题目描述
+
+```
+0,1,···,n-1这n个数字排成一个圆圈，从数字0开始，每次从这个圆圈里删除第m个数字（删除后从下一个数字开始计数）。求出这个圆圈里剩下的最后一个数字。
+
+例如，0、1、2、3、4这5个数字组成一个圆圈，从数字0开始每次删除第3个数字，则删除的前4个数字依次是2、0、4、1，因此最后剩下的数字是3。
+```
+
+### 解题思路
+
+单纯的模拟没意思，来学一下 新思路
+
+用 `f(n,m)` 表示 n 个人，数 m 次删 剩下最后一个人的编号
+
+- 那么 `f(1) === 0`
+- `f(n)` 删一次人就可以是 `f(n-1,m)` 状态
+- 那么第一次删掉的人的编号就是 `(m-1)%n`,他后面一个就是 `(m-1+1)%n = m%n`,这所谓后面一个 —— 就是 下一轮数数的“编号 0” ——f(n-1) 的第一位
+
+所以 `f(n) = (f(n-1) + m)%n`
+
+那么从人数只有 2 开始往 n 推，递推中的 i 就是人数，就是上式中的 n，等号左边的 ans 就是 f(n),右边的 ans 就是 f(n-1)
+
+### 代码
+
+```js
+/**
+ * @param {number} n
+ * @param {number} m
+ * @return {number}
+ */
+var lastRemaining = function (n, m) {
+	let ans = 0;
+	for (let i = 2; i <= n; i++) {
+		ans = (ans + m) % i;
+	}
+	return ans;
+};
+```
