509. 斐波那契数|动态规划

--- a/每周的题解/第七周.md
+++ b/每周的题解/第七周.md
@@ -86,3 +86,25 @@ var lastRemaining = function (n, m) {
 	return ans;
 };
 ```
+
+## 509. 斐波那契数|动态规划
+
+### 解题思路
+
+做过很多次类似的了，就是保持状态，然后转移。只用两个变量来省下 dp 数组的空间
+
+### 代码
+
+```js
+var fib = function (n) {
+	let a = 0,
+		b = 1,
+		c = 0;
+	for (let i = 0; i < n; i++) {
+		c = (a + b) % 1000000007;
+		a = b;
+		b = c;
+	}
+	return a;
+};
+```
