199.二叉树的右视图|层序遍历

--- a/每周的题解/第七周.md
+++ b/每周的题解/第七周.md
@@ -108,3 +108,35 @@ var fib = function (n) {
 	return a;
 };
 ```
+
+## 199.二叉树的右视图|层序遍历
+
+### 题目描述
+
+```
+给定一个二叉树的 根节点 root，想象自己站在它的右侧，按照从顶部到底部的顺序，返回从右侧所能看到的节点值。
+```
+
+### 解题思路
+
+就是层序遍历时，只取最后一个就好了
+
+### 代码
+
+```js
+var rightSideView = function (root) {
+	if (!root) return [];
+	const q = [root];
+	const res = [];
+	while (q.length) {
+		let len = q.length;
+		while (len--) {
+			const x = q.shift();
+			if (len === 0) res.push(x.val);
+			x.left && q.push(x.left);
+			x.right && q.push(x.right);
+		}
+	}
+	return res;
+};
+```
