--- a/每周的题解/第七周.md
+++ b/每周的题解/第七周.md
@@ -140,3 +140,50 @@ var rightSideView = function (root) {
 	return res;
 };
 ```
+
+## 283.移动零|双指针
+
+### 题目描述
+
+```
+给定一个数组 nums，编写一个函数将所有 0 移动到数组的末尾，同时保持非零元素的相对顺序。
+
+请注意 ，必须在不复制数组的情况下原地对数组进行操作。
+```
+
+### 解题思路
+
+题目说了不能复制数组只能在原地操作
+
+所以要怎么记录每个 0 应该到末尾的第几个位置？
+
+答案是双指针
+
+- 快指针一直移动
+- 慢指针只在快指针遇到非 0 元素的时候移动
+  - 即 只要快指针碰到 0 就在原地待一下
+  - 且在移动之前脚下的 0 与快指针脚下的值交换一下
+
+最后效果就是：慢指针左边没 0，右边一直到快指针区间都是 0
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {void} Do not return anything, modify nums in-place instead.
+ */
+var moveZeroes = function (nums) {
+	let slow = 0,
+		fast = 0;
+	while (fast < nums.length) {
+		if (nums[fast] != 0) {
+			if (nums[fast] !== 0) {
+				[nums[fast], nums[slow]] = [nums[slow], nums[fast]];
+				slow++;
+			}
+		}
+		fast++;
+	}
+};
+```
