198.打家劫舍|动态规划

--- a/每周的题解/第七周.md
+++ b/每周的题解/第七周.md
@@ -187,3 +187,55 @@ var moveZeroes = function (nums) {
 	}
 };
 ```
+
+## 198.打家劫舍|动态规划
+
+### 题目描述
+
+```
+Companies
+你是一个专业的小偷，计划偷窃沿街的房屋。每间房内都藏有一定的现金，影响你偷窃的唯一制约因素就是相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警。
+
+给定一个代表每个房屋存放金额的非负整数数组，计算你 不触动警报装置的情况下 ，一夜之内能够偷窃到的最高金额。
+```
+
+### 解题思路
+
+不能偷相邻的房屋
+
+不能偷相邻的房屋
+
+不能偷相邻的房屋
+
+那就是说，路过一个房屋时可以选择偷或者不偷，也可能是不允许选择偷
+
+那么到第 n 个房屋能偷到的金额最大值：
+
+- 要么就是 偷到上上家时的金额 + 当前第 n 个房屋的金额
+- 要么就是偷到上家的金额 —— 因为第 n 个房屋进去就给抓了，不能偷
+
+那么取它们两者中的最大值就好了
+
+状态转移方程就出来了
+
+```js
+dp[n] = max(dp[n - 2] + nums[n - 1], dp[n - 1]);
+//注意这里 num 的下标要 -1
+```
+
+初始化的话自然就是 第 0 家的时候能拿到的最大金额为 0 了：`dp[0]=0`
+
+### 代码
+
+```js
+var rob = function (nums) {
+	const len = nums.length;
+	if (len === 0) return 0;
+	const dp = new Array(len + 1);
+	dp[0] = 0;
+	dp[1] = nums[0];
+	for (let i = 2; i <= len; i++)
+		dp[i] = Math.max(dp[i - 1], dp[i - 2] + nums[i - 1]);
+	return dp[len];
+};
+```
