151. 颠倒字符串中的单词

--- a/每周的题解/第八周.md
+++ b/每周的题解/第八周.md
@@ -65,3 +65,34 @@ var firstMissingPositive = function (nums) {
 	return N + 1;
 };
 ```
+
+## 151. 颠倒字符串中的单词
+
+### 题目描述
+
+```
+给你一个字符串 s ，颠倒字符串中 单词 的顺序。
+
+单词 是由非空格字符组成的字符串。s 中使用至少一个空格将字符串中的 单词 分隔开。
+
+返回 单词 顺序颠倒且 单词 之间用单个空格连接的结果字符串。
+
+注意：输入字符串 s中可能会存在前导空格、尾随空格或者单词间的多个空格。返回的结果字符串中，单词间应当仅用单个空格分隔，且不包含任何额外的空格。
+```
+
+### 解题思路
+
+直接用 JS 的 API 可以轻松完成
+
+1. trim 去掉头尾多余空格
+2. split 按照单词分割为数组
+3. reverse 反转
+4. join 拼接回为字符串
+
+### 代码
+
+```js
+var reverseWords = function (s) {
+	return s.trim().split(/\s+/).reverse().join(' ');
+};
+```
