--- a/每周的题解/第八周.md
+++ b/每周的题解/第八周.md
@@ -96,3 +96,51 @@ var reverseWords = function (s) {
 	return s.trim().split(/\s+/).reverse().join(' ');
 };
 ```
+
+## 2.两数相加
+
+### 题目描述
+
+```
+给你两个 非空 的链表，表示两个非负的整数。它们每位数字都是按照 逆序 的方式存储的，并且每个节点只能存储 一位 数字。
+
+请你将两个数相加，并以相同形式返回一个表示和的链表。
+
+你可以假设除了数字 0 之外，这两个数都不会以 0 开头。
+```
+
+### 解题思路
+
+简单的模拟，看代码就知道了
+
+### 代码
+
+```js
+var addTwoNumbers = function (l1, l2) {
+	let head = null,
+		tail = null;
+	let carry = 0;
+	while (l1 || l2) {
+		const n1 = l1 ? l1.val : 0;
+		const n2 = l2 ? l2.val : 0;
+		const sum = n1 + n2 + carry;
+		if (!head) {
+			head = tail = new ListNode(sum % 10);
+		} else {
+			tail.next = new ListNode(sum % 10);
+			tail = tail.next;
+		}
+		carry = Math.floor(sum / 10);
+		if (l1) {
+			l1 = l1.next;
+		}
+		if (l2) {
+			l2 = l2.next;
+		}
+	}
+	if (carry > 0) {
+		tail.next = new ListNode(carry);
+	}
+	return head;
+};
+```
