19. 删除链表的倒数第 N 个结点|双指针

--- a/每周的题解/第八周.md
+++ b/每周的题解/第八周.md
@@ -144,3 +144,32 @@ var addTwoNumbers = function (l1, l2) {
 	return head;
 };
 ```
+
+## 19. 删除链表的倒数第 N 个结点|双指针
+
+### 题目描述
+
+```
+给你一个链表，删除链表的倒数第 n 个结点，并且返回链表的头结点。
+```
+
+### 解题思路
+
+一道经典双指针题目，就是要注意一下当传入链表只有一位的特殊情况，这里直接让他多一个虚拟头节点，这是链表题的一种常用技巧
+
+### 代码
+
+```js
+var removeNthFromEnd = function (head, n) {
+	let dummy = new ListNode(0, head);
+	let slow = dummy,
+		fast = head;
+	while (n--) fast = fast.next;
+	while (fast) {
+		fast = fast.next;
+		slow = slow.next;
+	}
+	slow.next = slow.next.next;
+	return dummy.next;
+};
+```
