230. 二叉搜索树中第 K 小的元素

--- a/每周的题解/第八周.md
+++ b/每周的题解/第八周.md
@@ -173,3 +173,42 @@ var removeNthFromEnd = function (head, n) {
 	return dummy.next;
 };
 ```
+
+## 230. 二叉搜索树中第 K 小的元素
+
+### 题目描述
+
+```
+给定一个二叉搜索树的根节点 root ，和一个整数 k ，请你设计一个算法查找其中第 k 个最小元素（从 1 开始计数）。
+```
+
+### 解题思路
+
+首先要知道，二叉搜索树的性质
+
+- 结点的左子树的所有数都小于自己
+- 右边所有都大于自己
+
+回顾一下中序遍历，就是 左-中-右
+
+那在二叉搜索树里不就是 从小到大搜，那搜到第 k 个不就是第 k 小的数
+
+具体用递归还是递推遍历 —— 随便，一般递推效率高，递推好写
+
+### 代码
+
+```js
+var kthSmallest = function (root, k) {
+	const stk = [];
+	while (root != null || stk.length) {
+		while (root != null) {
+			stk.push(root); //先把中存起来
+			root = root.left; //取左
+		}
+		root = stk.pop(); //取中
+		if (--k === 0) break;
+		root = root.right; //取右
+	}
+	return root.val;
+};
+```
