101. 对称二叉树

--- a/每周的题解/第八周.md
+++ b/每周的题解/第八周.md
@@ -212,3 +212,34 @@ var kthSmallest = function (root, k) {
 	return root.val;
 };
 ```
+
+## 101. 对称二叉树
+
+### 题目描述
+
+给你一个二叉树的根节点 root ， 检查它是否轴对称。
+
+### 解题思路
+
+递归判断子树就好了，注意是对称地判断
+
+### 代码
+
+```js
+var isSymmetric = function (root) {
+	if (!root) return root;
+	const isMirror = (l, r) => {
+		if (!l && !r) return true;
+		if (!l || !r) return false;
+		if (
+			l.val === r.val &&
+			isMirror(l.left, r.right) &&
+			isMirror(l.right, r.left)
+		) {
+			return true;
+		}
+		return false;
+	};
+	return isMirror(root.left, root.right);
+};
+```
