24. 两两交换链表中的节点|巧妙递归

--- a/每周的题解/第八周.md
+++ b/每周的题解/第八周.md
@@ -243,3 +243,39 @@ var isSymmetric = function (root) {
 	return isMirror(root.left, root.right);
 };
 ```
+
+## 24. 两两交换链表中的节点|巧妙递归
+
+### 题目描述
+
+```
+给你一个链表，两两交换其中相邻的节点，并返回交换后链表的头节点。你必须在不修改节点内部的值的情况下完成本题（即，只能进行节点交换）。
+```
+
+### 解题思路
+
+单纯的模拟思路就是：
+
+1. 先写一个交换相邻结点的方法
+2. 遍历链表，一直调用
+
+但是递归的思路更妙
+
+1. 每次调用返回的是 交换完成后的子链表
+2. a b 要交换，那么 a.next = 后面交换完成的子链表，b.next = a
+   1. 并且返回的是 b
+3. 后面没用节点了或者只剩一个结点时终止交换
+
+### 代码
+
+```js
+var swapPairs = function (head) {
+	if (head === null || head.next === null) {
+		return head;
+	}
+	let nxt = head.next;
+	head.next = swapPairs(nxt.next);
+	nxt.next = head;
+	return nxt;
+};
+```
