--- a/每周的题解/第八周.md
+++ b/每周的题解/第八周.md
@@ -279,3 +279,50 @@ var swapPairs = function (head) {
 	return nxt;
 };
 ```
+
+## 71.简化路径|栈
+
+### 题目描述
+
+```
+给你一个字符串 path ，表示指向某一文件或目录的 Unix 风格 绝对路径 （以 '/' 开头），请你将其转化为更加简洁的规范路径。
+
+在 Unix 风格的文件系统中，一个点（.）表示当前目录本身；此外，两个点 （..） 表示将目录切换到上一级（指向父目录）；两者都可以是复杂相对路径的组成部分。任意多个连续的斜杠（即，'//'）都被视为单个斜杠 '/' 。 对于此问题，任何其他格式的点（例如，'...'）均被视为文件/目录名称。
+
+请注意，返回的 规范路径 必须遵循下述格式：
+
+始终以斜杠 '/' 开头。
+两个目录名之间必须只有一个斜杠 '/' 。
+最后一个目录名（如果存在）不能 以 '/' 结尾。
+此外，路径仅包含从根目录到目标文件或目录的路径上的目录（即，不含 '.' 或 '..'）。
+返回简化后得到的 规范路径 。
+```
+
+### 解题思路
+
+题目很长，但大意就是，给你一个绝对路径，能不能搞为相对路径，让他短一点，另外还要改变一些格式
+
+首先明确一点，一整个传入的字符串，会被`/`切割为多个小的单元
+
+- 合理的字符串：跳转到当前文件夹下面的该文件/目录下面
+- `..`:往回走一级
+- `.`：表示当前目录本身
+- 为空 比如`//`的情况
+
+前两种情况要进退，后面两种直接忽略就好
+
+要进退，那么我们就想到 栈 这一个数据结构
+
+### 代码
+
+```js
+var simplifyPath = function (path) {
+	const names = path.split('/');
+	const stk = [];
+	for (const name of names) {
+		if (name === '..') stk.length && stk.pop();
+		else if (name.length && name !== '.') stk.push(name);
+	}
+	return `/${stk.join('/')}`;
+};
+```
