122. 买卖股票的最佳时机 II|贪心

--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -62,3 +62,38 @@ var nextPermutation = function (nums) {
 	}
 };
 ```
+
+## 122. 买卖股票的最佳时机 II|贪心
+
+### 题目描述
+
+```
+给你一个整数数组 prices ，其中 prices[i] 表示某支股票第 i 天的价格。
+
+在每一天，你可以决定是否购买和/或出售股票。你在任何时候 最多 只能持有 一股 股票。你也可以先购买，然后在 同一天 出售。
+
+返回 你能获得的 最大 利润 。
+```
+
+### 解题思路
+
+买股票嘛，人人都懂的，低买高卖
+这道题和 [121. 买卖股票的最佳时机](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)的区别在于，这里可以多次交易，之前那道只能买卖一次。
+
+那么我们在每次下跌之前买出，下跌之后，且后面会涨之前买入即可
+
+那在题目里，不就是 每次有上涨的空间就收入囊中就好了
+
+### 代码
+
+```js
+var maxProfit = function (prices) {
+	let profit = 0;
+	for (let i = 1; i < prices.length; i++) {
+		if (prices[i] > prices[i - 1]) {
+			profit += prices[i] - prices[i - 1];
+		}
+	}
+	return profit;
+};
+```
