236. 二叉树的最近公共祖先|递归|哈希思路

--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -97,3 +97,54 @@ var maxProfit = function (prices) {
 	return profit;
 };
 ```
+
+## 236. 二叉树的最近公共祖先|递归|哈希思路
+
+### 题目描述
+
+```
+给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。
+
+百度百科中最近公共祖先的定义为：“对于有根树 T 的两个节点 p、q，最近公共祖先表示为一个节点 x，满足 x 是 p、q 的祖先且 x 的深度尽可能大（一个节点也可以是它自己的祖先）。”
+```
+
+### 解题思路
+
+#### 递归
+
+p、q 分别在某个节点的左右子树时，该节点就是最近的公共祖先
+
+- lson 或者 rson 为 true 就说明有
+- 或者 当前递归到达的节点就是 p 或者 q，也算是在其子树中
+
+每个节点访问一次，时间复杂度为 O(n),递归空间最坏情况为二叉树为一条链，也是 O(n)
+
+#### Hash
+
+这题如果是双向链表就很简单，q 先往上面找节点，用 map 存好。再从 p 开始往上找，遇到的第一个已经存入 map 的就是最近公共祖先
+
+但是是单向的，还需要先手动递归一遍记录每个节点的父节点
+
+空间和时间复杂度都没进化，不写了
+
+### 代码
+
+```js
+var lowestCommonAncestor = function (root, p, q) {
+	let ans;
+	const dfs = (root, p, q) => {
+		if (root === null) return false;
+		const lson = dfs(root.left, p, q),
+			rson = dfs(root.right, p, q);
+		if (
+			(rson && lson) ||
+			((root.val === p.val || root.val === q.val) && (rson || lson))
+		) {
+			ans = root;
+		}
+		return lson || rson || root.val === q.val || root.val === p.val;
+	};
+	dfs(root, p, q);
+	return ans;
+};
+```
