--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -148,3 +148,45 @@ var lowestCommonAncestor = function (root, p, q) {
 	return ans;
 };
 ```
+
+## 1143. 最长公共子序列|动态规划|DP
+
+### 题目描述
+
+```
+给定两个字符串 text1 和 text2，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 0 。
+
+一个字符串的 子序列 是指这样一个新的字符串：它是由原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串。
+
+例如，"ace" 是 "abcde" 的子序列，但 "aec" 不是 "abcde" 的子序列。
+两个字符串的 公共子序列 是这两个字符串所共同拥有的子序列。
+```
+
+### 解题思路
+
+最长公共子序列，一道经典 二维 DP 题目
+
+- `dp[i][j]`表示`text1`前 i 位和`text2`前 j 位的最长公共子序列
+- 初始化：dp 全为 0
+- `text1[i-1] === text[j-1]`时，`dp[i][j] = dp[i-1][j-1] + 1`
+- 不相等的时候，考虑是 `text1[0:i-1]和text2[0:j]`还是`text1[0:i]和text2[0:j-1]`的最长公共子序列长，取 max 就好
+
+### 代码
+
+```js
+var longestCommonSubsequence = function (text1, text2) {
+	const n = text1.length,
+		m = text2.length;
+	const dp = new Array(n + 1).fill(0).map(item => new Array(m + 1).fill(0));
+
+	for (let i = 1; i <= n; i++) {
+		const c1 = text1[i - 1];
+		for (let j = 1; j <= m; j++) {
+			const c2 = text2[j - 1];
+			if (c1 === c2) dp[i][j] = dp[i - 1][j - 1] + 1;
+			else dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
+		}
+	}
+	return dp[n][m];
+};
+```
