349. 两个数组的交集|哈希|JS 去重

--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -190,3 +190,34 @@ var longestCommonSubsequence = function (text1, text2) {
 	return dp[n][m];
 };
 ```
+
+## 349. 两个数组的交集|哈希|JS 去重
+
+### 题目描述
+
+```
+给定两个数组 nums1 和 nums2 ，返回 它们的交集 。输出结果中的每个元素一定是 唯一 的。我们可以 不考虑输出结果的顺序 。
+```
+
+### 解题思路
+
+简单题，咱们就不要把它复杂化了
+用哈希表存一下 nums1 的，然后遍历 nums2，已经出现过在哈希表中的就加入答案数组
+
+要注意的是，可能会有重复的，所以还要去一下重
+
+这里用 ES6 最简单最方便最好用、必会 的去重
+
+### 代码
+
+```js
+var intersection = function (nums1, nums2) {
+	const st1 = new Set(nums1);
+	let res = [];
+	for (let v of nums2) {
+		if (st1.has(v)) res.push(v);
+	}
+	res = [...new Set(res)];
+	return res;
+};
+```
