429. N 叉树的层序遍历|BFS|广度优先搜索

--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -221,3 +221,47 @@ var intersection = function (nums1, nums2) {
 	return res;
 };
 ```
+
+## 429. N 叉树的层序遍历|BFS|广度优先搜索
+
+### 题目描述
+
+```
+给定一个 N 叉树，返回其节点值的层序遍历。（即从左到右，逐层遍历）。
+
+树的序列化输入是用层序遍历，每组子节点都由 null 值分隔（参见示例）。
+```
+
+### 解题思路
+
+层序遍历，就用广度优先搜索
+
+要用一个队列
+
+先放 root 进 que，只要 que 不为空，就遍历 que 里面的节点，cnt 就是遍历开始前取的 que 的长度，代表上一层的节点的数量。然后一边从头取出前面的（即上一层的），在尾部放入被取出节点的子节点
+
+然后记得特殊情况的处理
+
+还有每层的 level 存下来，遍历完一次后就要放入 ans
+
+### 代码
+
+```js
+var levelOrder = function (root) {
+	if (!root) return [];
+
+	const ans = [],
+		que = [root];
+	while (que.length) {
+		const cnt = que.length;
+		const level = [];
+		for (let i = 0; i < cnt; i++) {
+			const cur = que.shift();
+			level.push(cur.val);
+			for (const c of cur.children) que.push(c);
+		}
+		ans.push(level);
+	}
+	return ans;
+};
+```
