1556. 千位分隔数|简单模拟

--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -265,3 +265,32 @@ var levelOrder = function (root) {
 	return ans;
 };
 ```
+
+## 1556. 千位分隔数|简单模拟
+
+### 题目描述
+
+```
+给你一个整数 n，请你每隔三位添加点（即 "." 符号）作为千位分隔符，并将结果以字符串格式返回。
+```
+
+### 解题思路
+
+一道简单的模拟题
+
+### 代码
+
+```js
+var thousandSeparator = function (n) {
+	const s = n + '';
+	let res = [];
+	for (let i = s.length - 1; i >= 0; i = i - 3) {
+		res.push(s[i]);
+		res.push(s[i - 1]);
+		res.push(s[i - 2]);
+		res.push('.');
+	}
+	res.pop();
+	return res.reverse().join('');
+};
+```
