124. 二叉树中的最大路径和|DFS|递归

--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -294,3 +294,62 @@ var thousandSeparator = function (n) {
 	return res.reverse().join('');
 };
 ```
+
+## 124. 二叉树中的最大路径和|DFS|递归
+
+### 题目描述
+
+```
+Companies
+路径 被定义为一条从树中任意节点出发，沿父节点-子节点连接，达到任意节点的序列。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
+
+路径和 是路径中各节点值的总和。
+
+给你一个二叉树的根节点 root ，返回其 最大路径和 。
+```
+
+### 解题思路
+
+走到一个点：
+
+- 停下
+- 往左
+- 往右
+
+走到下一个点也是如此
+
+适合递归~ 分别对应的就是
+
+- root.val
+- root.val + dfs(root.left)
+- root.val + dfs(root.right)
+
+递归，关键在于不要在乎递归的“细节”
+
+注意最终答案的路径不一定是有经过根节点，所以要比较每一个子树
+
+> 这里要注意的是，`Number.MIN_VALUE` 就是在 `JavaScript`中所能表示的最小的**正值**
+> 所以要用 `Number.MIN_SAFE_INTEGER`或者一个小一点的负数才能 AC
+
+### 代码
+
+```js
+var maxPathSum = function (root) {
+	if (root === null) return 0;
+	let maxSum = -9999;
+	const dfs = root => {
+		if (root === null) return 0;
+		const left = dfs(root.left),
+			right = dfs(root.right);
+
+		const subTreeSum = root.val + left + right;
+		maxSum = Math.max(maxSum, subTreeSum);
+
+		return root.val + Math.max(0, left, right) > 0
+			? root.val + Math.max(0, left, right)
+			: 0;
+	};
+	dfs(root);
+	return maxSum;
+};
+```
