394. 字符串解码|栈|字符串|JS字符串判断数字、拼接

--- a/每周的题解/第九周.md
+++ b/每周的题解/第九周.md
@@ -353,3 +353,59 @@ var maxPathSum = function (root) {
 	return maxSum;
 };
 ```
+
+## 394. 字符串解码|栈|字符串|JS 字符串判断数字、拼接
+
+### 题目描述
+
+```
+编码规则为: k[encoded_string]，表示其中方括号内部的 encoded_string 正好重复 k 次。注意 k 保证为正整数。
+
+你可以认为输入字符串总是有效的；输入字符串中没有额外的空格，且输入的方括号总是符合格式要求的。
+
+此外，你可以认为原始数据不包含数字，所有的数字只表示重复的次数 k ，例如不会出现像 3a 或 2[4] 的输入。
+```
+
+### 解题思路
+
+有关于括号，那就是有关于 栈~
+
+遍历字符串 s：
+
+- c 为字母时，就加到 `res` 后面
+- c 为数字时就设置 `mult`
+- c 为 [ 时：
+  - 就把 临时结果 `res` 推到 `strStk` 栈中
+  - `mult` 推到 `multStk` 栈中
+  - 注意两个都要再初始化
+- c 为]时：
+  - `strStk` 和 `multStk` 都出一项进行操作，
+  - `mult.pop() * str.Stk.pop()`
+  - 操作完拼接到 `res` 上
+
+代码中 我把 `strStk` 栈和 `multStk` 栈合在一块了
+还有要注意的点，就是遍历到数字时要 ×10，一开始没反应过来，因为示例都只是个位数 hh
+
+> 参考图解：https://leetcode.cn/problems/decode-string/solution/decode-string-fu-zhu-zhan-fa-di-gui-fa-by-jyd/
+
+### 代码
+
+```js
+var decodeString = function (s) {
+	let stk = [],
+		res = '',
+		mult = 0;
+	for (let c of s) {
+		if (c === '[') {
+			stk.push([mult, res]);
+			[mult, res] = [0, ''];
+		} else if (c === ']') {
+			const [tmult, lastStr] = stk.pop();
+			res = lastStr + res.repeat(tmult);
+		} else if (!isNaN(c)) {
+			mult = mult * 10 + parseInt(c); //注意这里要×10
+		} else res += c;
+	}
+	return res;
+};
+```
