40.组合总和Ⅱ|回溯

--- a/每周的题解/第十周.md
+++ b/每周的题解/第十周.md
@@ -1,7 +1,7 @@
 `okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~
 新版板块 —— 各种常用手写
 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
-如果你已经按题型分类系统地刷了一遍算法
+如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~ 欢迎 star⭐
 
 ## 443. 压缩字符串|双指针|字符串
 
@@ -65,5 +65,93 @@ var compress = function (chars) {
 		tcnt++;
 	}
 	return write;
+};
+```
+
+## 40.组合综合 Ⅱ|回溯
+
+### 题目描述
+
+```
+给定一个候选人编号的集合 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
+
+candidates 中的每个数字在每个组合中只能使用 一次 。
+
+注意：解集不能包含重复的组合。
+```
+
+### 解题思路
+
+像这种求组合情况的，可以想到 回溯算法
+
+- 注意：解集不能包含重复的组合
+
+怎么样不会有重复的组合 —— 你 dfs 往下走的时候别用重复的元素呗
+
+> [1,1,2] target = 3,你往下搜，结果你两次进入都用 1，那就会有 [1,2],[1,2]重复了
+
+那么怎么知道，前面的 1 已经用过了？记录一下上一次进入的，如果上一次进入的和现在进入的一样 —— 都是 1， 那就是用过
+
+怎么确保两个 1 连在一起？先排序
+
+---
+
+剪枝：除了达到 target 之外什么时候停止递归？
+
+- 遍历完了 candidates
+- 已经不可能为 target 了
+
+那么关键就在 第二个点，什么时候不可能为 target —— 已经大于 target 了，那再怎么加也不可能了
+
+> 和 39.组合总和区别:
+>
+> 1. 每个数字都只能用一次
+> 2. 数组中的元素是有可能重复的
+
+时间复杂度：
+`每项是否枚举*插入结果数组 = O(2^n*n)`
+
+空间复杂度：
+`O(n)`
+
+### 代码
+
+```js
+/**
+ * @param {number[]} candidates
+ * @param {number} target
+ * @return {number[][]}
+ */
+var combinationSum2 = function (candidates, target) {
+	const res = [],
+		path = [],
+		len = candidates.length;
+	candidates.sort();
+
+	const dfs = (sum, i) => {
+		if (sum > target) return;
+		if (sum === target) {
+			res.push([...path]);
+			return;
+		}
+
+		let pre = -1; //recored last
+		for (let j = i; j < len; j++) {
+			const cur = candidates[j];
+			if (cur > target - sum || cur === pre) continue;
+			path.push(cur);
+			sum += cur;
+			pre = cur;
+			//往下走
+			dfs(sum, j + 1);
+			//回溯
+			path.pop();
+			sum -= cur;
+		}
+	};
+
+	dfs(0, 0);
+
+	return res;
 };
 ```
