1636. 按照频率将数组升序排序|自定义 sort|Map

--- a/每周的题解/第十周.md
+++ b/每周的题解/第十周.md
@@ -155,3 +155,42 @@ var combinationSum2 = function (candidates, target) {
 	return res;
 };
 ```
+
+## 1636. 按照频率将数组升序排序|自定义 sort|Map
+
+### 题目描述
+
+```
+给你一个整数数组 nums ，请你将数组按照每个值的频率 升序 排序。如果有多个值的频率相同，请你按照数值本身将它们 降序 排序。
+
+请你返回排序后的数组。
+```
+
+### 解题思路
+
+很明显，这是要自定义排序的
+
+两个排序条件：
+
+1. 值频率相同时按值本身降序排序
+2. 值频率不同时按值频率升序排序
+
+先用一个 map 存值频率就好了
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var frequencySort = function (nums) {
+	const count = new Map();
+	nums.forEach(num => void (count[num] = count[num] + 1 || 1));
+	nums.sort((a, b) => {
+		if (count[a] === count[b]) return b - a;
+		return count[a] - count[b];
+	});
+	return nums;
+};
+```
