feat: 面试题 01.02. 判定是否互为字符重排|map

--- a/每周的题解/11.md
+++ b/每周的题解/11.md
@@ -64,3 +64,36 @@ var missingTwo = function (nums) {
 	return res;
 };
 ```
+
+## 面试题 01.02. 判定是否互为字符重排
+
+### 题目描述
+
+```
+给定两个字符串 s1 和 s2，请编写一个程序，确定其中一个字符串的字符重新排列后，能否变成另一个字符串。
+```
+
+### 解题思路
+
+判断重新排列后能不能变 —— 那不就是看字符串中各个字母出现的次数一不一样咯
+
+一样就是可以
+
+### 代码
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {boolean}
+ */
+var CheckPermutation = function (s1, s2) {
+	const mp = new Map();
+	for (let c of s1) mp.set(c, (mp.get(c) || 0) + 1);
+	for (let c of s2) mp.set(c, (mp.get(c) || 0) - 1);
+	for (let v of mp.values()) {
+		if (v !== 0) return false;
+	}
+	return true;
+};
+```
