--- a/每周的题解/11.md
+++ b/每周的题解/11.md
@@ -97,3 +97,62 @@ var CheckPermutation = function (s1, s2) {
 	return true;
 };
 ```
+
+## 面试题 17.09. 第 k 个数|归并排序|三指针
+
+### 题目描述
+
+```
+有些数的素因子只有 3，5，7，请设计一个算法找出第 k 个数。注意，不是必须有这些素因子，而是必须不包含其他的素因子。例如，前几个数按顺序应该是 1，3，5，7，9，15，21。
+
+```
+
+### 解题思路
+
+说实话，第一次看题目真没看懂
+
+题目意思应该是 这种数的素数因子中只能有 3 5 7，比如 11 有个素数因子为 11，就不满足
+
+ok，那意思就是 这种数 x3 x5 x7 后会得到更大的这种数~
+
+那么假设第一个数是 `k[0]`
+那么后面的数就是分别为
+
+```js
+k[0]*3,k[1]*3,k[2]*3,k[3]*3...
+k[0]*5,k[1]*5,k[2]*5,k[3]*5...
+k[0]*7,k[1]*7,k[2]*7,k[3]*7...
+```
+
+这三个数列合在一起，就是题意中的 `1，3，5，7，9，15，21...`
+
+合起来 —— 按顺序合起来，重复的要去掉~ 欸注意，这三个数列，分别也都是有顺序的！
+
+是不是有点像这题 [88. 合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array)
+
+那题两个指针来归并排序，那这题就是三个指针来归并排序哩
+
+### 代码
+
+```js
+/**
+ * @param {number} k
+ * @return {number}
+ */
+var getKthMagicNumber = function (k) {
+	let arr = [1];
+	let j3 = 0,
+		j5 = 0,
+		j7 = 0;
+	for (let i = 1; i < k; i++) {
+		let a = arr[j3] * 3,
+			b = arr[j5] * 5,
+			c = arr[j7] * 7;
+		arr[i] = Math.min(a, b, c);
+		if (arr[i] === a) j3++;
+		if (arr[i] === b) j5++;
+		if (arr[i] === c) j7++;
+	}
+	return arr[k - 1];
+};
+```
