feat:  面试题 01.09. 字符串轮转

--- a/每周的题解/11.md
+++ b/每周的题解/11.md
@@ -156,3 +156,40 @@ var getKthMagicNumber = function (k) {
 	return arr[k - 1];
 };
 ```
+
+## 面试题 01.09. 字符串轮转
+
+### 题目描述
+
+```
+字符串轮转。给定两个字符串s1和s2，请编写代码检查s2是否为s1旋转而成（比如，waterbottle是erbottlewat旋转后的字符串）。
+```
+
+### 解题思路
+
+一开始我以为和这题[面试题 01.02. 判定是否互为字符重排] 一样，判断字符串中字符出现频数一样就好，但是 并不是。
+
+仔细看了看，他这个“旋转”
+
+就是整个字符串像双向队列一样，前面的字符依次从前面退出后依次从后面进入
+
+本来打算双指针一个个遍历模拟比对，感觉有点复杂，但是这是简单题，还说只能检测一次字串 🤔
+
+既然是像双向队列一样，那我直接把 s1 重复两次，如果 s2 是可以从 s1“旋转”得来的，那不就能从 `2*s1 `中找到子串是 s2 嘛
+
+当然，search 这个 API，你可以尝试自己实现一下~ 反正我是觉得这题核心是想到 `s2`是`2*s1`子串
+
+### 代码
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {boolean}
+ */
+var isFlipedString = function (s1, s2) {
+	if (s1.length !== s2.length) return false;
+	const s = s1 + s1;
+	return s.search(s2) !== -1;
+};
+```
