feat: lc 1694. 重新格式化电话号码 |模拟

--- a/每周的题解/11.md
+++ b/每周的题解/11.md
@@ -193,3 +193,53 @@ var isFlipedString = function (s1, s2) {
 	return s.search(s2) !== -1;
 };
 ```
+
+## 1694. 重新格式化电话号码
+
+### 题目描述
+
+```
+给你一个字符串形式的电话号码 number 。number 由数字、空格 ' '、和破折号 '-' 组成。
+
+请你按下述方式重新格式化电话号码。
+
+首先，删除 所有的空格和破折号。
+其次，将数组从左到右 每 3 个一组 分块，直到 剩下 4 个或更少数字。剩下的数字将按下述规定再分块：
+2 个数字：单个含 2 个数字的块。
+3 个数字：单个含 3 个数字的块。
+4 个数字：两个分别含 2 个数字的块。
+最后用破折号将这些块连接起来。注意，重新格式化过程中 不应该 生成仅含 1 个数字的块，并且 最多 生成两个含 2 个数字的块。
+
+返回格式化后的电话号码。
+
+```
+
+### 解题思路
+
+就是简单的模拟
+
+遍历完看最后一项是不是单项
+单项就特殊处理一下
+
+### 代码
+
+```js
+/**
+ * @param {string} number
+ * @return {string}
+ */
+var reformatNumber = function (number) {
+	const s = number.replaceAll(/\-|\s/g, '');
+	const res = Array.from({ length: Math.ceil(s.length / 3) }, x => 0).map(
+		(_, i) => s.slice(i * 3, i * 3 + 3)
+	);
+
+	if (res[res.length - 1].length === 1) {
+		res[res.length - 1] = res[res.length - 2].slice(-1) + res[res.length - 1];
+		res[res.length - 2] = res[res.length - 2].slice(0, 2);
+	}
+	// console.log(arr)
+	return res.join('-');
+};
+// @lc code=end
+```
