feat: lc 777. 在 LR 字符串中交换相邻字符

--- a/每周的题解/11.md
+++ b/每周的题解/11.md
@@ -243,3 +243,74 @@ var reformatNumber = function (number) {
 };
 // @lc code=end
 ```
+
+## 777. 在 LR 字符串中交换相邻字符
+
+### 题目描述
+
+```
+在一个由 'L' , 'R' 和 'X' 三个字符组成的字符串（例如"RXXLRXRXL"）中进行移动操作。一次移动操作指用一个"LX"替换一个"XL"，或者用一个"XR"替换一个"RX"。现给定起始字符串start和结束字符串end，请编写代码，当且仅当存在一系列移动操作使得start可以转换成end时， 返回True。
+```
+
+### 解题思路
+
+LX 可以替换 XL，就是 L 可以往左边走
+
+RX 可以替换 XR，就是 R 可以往右边走
+
+X 就等于是空，LR 就是会移动的墙
+
+所以，LR 之间的相对顺序一定要相同
+
+end 中的 L 一定要在 start 中对应的 L 的左边，即下标比较小，R 同理
+
+综上，满足以下条件：
+
+- start end 两个字符串总长一致
+- LR 相对顺序一致
+- 同一堵墙相对位置要合理
+  - end 中 L 下标 < start 中对应的 L
+  - end 中 R 下标 > start 中对应的 R
+- 墙的个数要一样
+
+才 true，否则都会 false
+
+### 代码
+
+```js
+/**
+ * @param {string} start
+ * @param {string} end
+ * @return {boolean}
+ */
+var canTransform = function (start, end) {
+	if (start.length !== end.length) return false;
+	const n = start.length;
+	let i = 0,
+		j = 0;
+	while (i < n && j < n) {
+		while (i < n && start[i] === 'X') i++;
+		while (j < n && end[j] === 'X') j++;
+		// i j 都遇到了自己的墙
+		if (i < n && j < n) {
+			//两堵墙不一样就说明相对顺序不一样
+			if (start[i] !== end[j]) return false;
+			const c = start[i];
+			//相对顺序一样，但是同一堵墙相对位置不合理
+			if ((c === 'L' && i < j) || (c === 'R' && i > j)) return false;
+			//继续往下走找下一堵墙
+			i++, j++;
+		}
+	}
+	//有一个字符串已经遍历完了，但是另一个后面还有墙也是 false
+	while (i < n) {
+		if (start[i] !== 'X') return false;
+		i++;
+	}
+	while (j < n) {
+		if (end[j] !== 'X') return false;
+		j++;
+	}
+	return true;
+};
+```
