feat: lc 1784.检查二进制字符串字段.js

--- a/每周的题解/11.md
+++ b/每周的题解/11.md
@@ -314,3 +314,42 @@ var canTransform = function (start, end) {
 	return true;
 };
 ```
+
+## 1784. 检查二进制字符串字段
+
+### 题目描述
+
+```
+给你一个二进制字符串 s ，该字符串 不含前导零 。
+
+如果 s 包含 零个或一个由连续的 '1' 组成的字段 ，返回 true​​​ 。否则，返回 false 。
+
+如果 s 中 由连续若干个 '1' 组成的字段 数量不超过 1，返回 true​​​ 。否则，返回 false 。
+```
+
+### 解题思路
+
+一道简单的字符串题，遍历然后进行判断就好了，考察字符串简单的操作
+
+还有判断是否有 01 得方法 或者说，判断出现 0 后再出现 1 的话肯定是错的，因为肯定是 1 开头，代码就不写了 也简单的一
+
+### 代码
+
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var checkOnesSegment = function (s) {
+	let len = s.length,
+		flag = 1;
+	for (let i = 0; i < len; i++) {
+		if (s[i] === '1' && flag) {
+			flag = 0;
+			while (s[i] === '1') i++;
+		}
+		if (s[i] === '1') return false;
+	}
+	return true;
+};
+```
