feat: 811. 子域名访问计数

--- a/每周的题解/12.md
+++ b/每周的题解/12.md
@@ -52,3 +52,56 @@ var minAddToMakeValid = function (s) {
 	return cnt + left;
 };
 ```
+
+## 811. 子域名访问计数
+
+### 题目描述
+
+```
+网站域名 "discuss.leetcode.com" 由多个子域名组成。顶级域名为 "com" ，二级域名为 "leetcode.com" ，最低一级为 "discuss.leetcode.com" 。当访问域名 "discuss.leetcode.com" 时，同时也会隐式访问其父域名 "leetcode.com" 以及 "com" 。
+
+计数配对域名 是遵循 "rep d1.d2.d3" 或 "rep d1.d2" 格式的一个域名表示，其中 rep 表示访问域名的次数，d1.d2.d3 为域名本身。
+
+例如，"9001 discuss.leetcode.com" 就是一个 计数配对域名 ，表示 discuss.leetcode.com 被访问了 9001 次。
+给你一个 计数配对域名 组成的数组 cpdomains ，解析得到输入中每个子域名对应的 计数配对域名 ，并以数组形式返回。可以按 任意顺序 返回答案。
+```
+
+### 解题思路
+
+感觉也只是简单的模拟操作，遍历读入的数组
+
+将字符串分为两块：
+
+- 数字
+- 域名
+
+记录第一个数字项，然后把后面的字符串按`.`分割开
+
+建立映射，遍历，加上数据就好了，注意域名之间的关系与连接就是了
+注意父域名、子域名顺序~
+
+就是这次代码写的不太美观
+
+### 代码
+
+```js
+var subdomainVisits = function (cpdomains) {
+	const mp = {};
+	for (let s of cpdomains) {
+		const cnt = parseInt(s.split(' ')[0]);
+		const domain = s.split(' ')[1];
+		const ds = domain.split('.').reverse();
+		let pre;
+		for (const c of ds) {
+			const key = `${c}${pre ? `.${pre}` : ''}`;
+			mp[key] = (mp[key] || 0) + cnt;
+			pre = key;
+		}
+	}
+	// console.log(mp);
+	const ans = [];
+	for (const k in mp) ans.push(mp[k] + ' ' + k);
+	// console.log(ans);
+	return ans;
+};
+```
