feat: lc 927.三等分|hard

--- a/每周的题解/12.md
+++ b/每周的题解/12.md
@@ -105,3 +105,111 @@ var subdomainVisits = function (cpdomains) {
 	return ans;
 };
 ```
+
+## 927. 三等分
+
+### 题目描述
+
+```
+给定一个由 0 和 1 组成的数组 arr ，将数组分成  3 个非空的部分 ，使得所有这些部分表示相同的二进制值。
+
+如果可以做到，请返回任何 [i, j]，其中 i+1 < j，这样一来：
+
+arr[0], arr[1], ..., arr[i] 为第一部分；
+arr[i + 1], arr[i + 2], ..., arr[j - 1] 为第二部分；
+arr[j], arr[j + 1], ..., arr[arr.length - 1] 为第三部分。
+这三个部分所表示的二进制值相等。
+如果无法做到，就返回 [-1, -1]。
+
+注意，在考虑每个部分所表示的二进制时，应当将其看作一个整体。例如，[1,1,0] 表示十进制中的 6，而不会是 3。此外，前导零也是被允许的，所以 [0,1,1] 和 [1,1] 表示相同的值。
+```
+
+### 解题思路
+
+首先要有一个函数处理二进制
+
+- 十进制转二进制可以用 `number.toString(2)`
+- 二进制转十进制可以 `parseInt(number, 2)`
+
+我们这里用第二个，不过要注意传入的 number 原本是 string 类型，number 类型传入是会自动转换的，最后返回的也是 number 类型
+
+然后就是要双指针遍历了 —— 但是，很明显会超时~
+
+> 这里贴上我这笨比一开始的代码
+
+```js
+const part2ten = (i, j, arr) => {
+	let s = '';
+	for (let k = i; k <= j; k++) s += arr[k];
+	return parseInt(s, 2);
+};
+/**
+ * @param {number[]} arr
+ * @return {number[]}
+ */
+var threeEqualParts = function (arr) {
+	let i, j;
+	for (i = 0; i < arr.length - 1; i++) {
+		for (j = i + 2; j < arr.length; j++) {
+			const a = part2ten(0, i, arr),
+				b = part2ten(i + 1, j - 1, arr),
+				c = part2ten(j, arr.length - 1, arr);
+			if (a === b && b === c) return [i, j];
+		}
+	}
+	return [-1, -1];
+};
+```
+
+那么要怎么样减少 没必要的遍历呢
+
+首先，全部为 0 的情况，随便截取都合法的，随便返回一个 `[0,2]`保证不会出错（其他受总长度影响还不一定）
+
+其次，有 1 的情况下要想三部分的值相等，那么 1 的总数`cnt`就必须要为 3 的倍数，不然怎么够分？
+
+并且每一份中的 1 的个数`partc`必须相等为`cnt/3`，所以我们可以通过这个找到每一份中第一个 1 的位置，但是每一份前置零和后置零的个数该怎么确认？
+
+首先，唯一能确认后置零个数的就是第三段，即最后一段 —— 这个不难理解吧
+而**前置零又改变不了值**，所以每等分的值已经确认下来了
+
+所以判断的时候，从每一段的第一个 1 的位置开始往后遍历就好了
+
+### 代码
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number[]}
+ */
+var threeEqualParts = function (arr) {
+	const cnt1 = arr.reduce((sum, cur) => sum + cur, 0);
+	if (cnt1 === 0) return [0, 2];
+	if (cnt1 % 3 !== 0) return [-1, -1];
+	const partc = Math.floor(cnt1 / 3);
+	//通过 partc 找到每一份中 第一个 1 的位置
+	let t1,
+		t2,
+		t3,
+		idx1 = 0; //第几个1
+	for (let i = 0; i < arr.length; i++) {
+		if (arr[i] === 1) {
+			idx1++;
+			if (idx1 === 1) t1 = i;
+			if (idx1 === partc + 1) t2 = i;
+			if (idx1 === partc * 2 + 1) t3 = i;
+		}
+	}
+	let len = arr.length - t3; //最后一段第一个 1 到末尾的长度
+	if (t1 + len <= t2 && t2 + len <= t3) {
+		let j = 0;
+		while (t3 + j < arr.length) {
+			//有一位不同就不行
+			if (arr[t1 + j] !== arr[t2 + j] || arr[t1 + j] !== arr[t3 + j])
+				return [-1, -1];
+			j++;
+		}
+		return [t1 + len - 1, t2 + len];
+	}
+	return [-1, -1];
+};
+```
