feat: lc 1800. 最大升序子数组和

--- a/每周的题解/12.md
+++ b/每周的题解/12.md
@@ -213,3 +213,48 @@ var threeEqualParts = function (arr) {
 	return [-1, -1];
 };
 ```
+
+## 1800. 最大升序子数组和
+
+### 题目描述
+
+```
+给你一个正整数组成的数组 nums ，返回 nums 中一个 升序 子数组的最大可能元素和。
+
+子数组是数组中的一个连续数字序列。
+
+已知子数组 [numsl, numsl+1, ..., numsr-1, numsr] ，若对所有 i（l <= i < r），numsi < numsi+1 都成立，则称这一子数组为 升序 子数组。注意，大小为 1 的子数组也视作 升序 子数组。
+```
+
+### 解题思路
+
+就注意一点，子数组是数组中的一个**连续数字序列**
+
+简单多了，直接模拟
+
+- cur 是当前子数组的和
+- res 就是所有子数组的和中最大的
+
+如果当前遍历的大于前面一个，说明就能继续 升序
+如果不是，则上一个升序子数组就已经结束了。那就以当前这个重新开始下一个升序子数组的计算
+
+> 你会发现，实际上也是动态规划了
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxAscendingSum = function (nums) {
+	const len = nums.length;
+	let res = nums[0];
+	for (let i = 1, cur = nums[0]; i < len; i++) {
+		if (nums[i] > nums[i - 1]) cur += nums[i];
+		else cur = nums[i];
+		res = Math.max(res, cur);
+	}
+	return res;
+};
+```
