feat: lc 870. 优势洗牌|贪心|田忌赛马

--- a/每周的题解/12.md
+++ b/每周的题解/12.md
@@ -258,3 +258,56 @@ var maxAscendingSum = function (nums) {
 	return res;
 };
 ```
+
+## 870. 优势洗牌
+
+### 题目描述
+
+```
+给定两个大小相等的数组 nums1 和 nums2，nums1 相对于 nums 的优势可以用满足 nums1[i] > nums2[i] 的索引 i 的数目来描述。
+
+返回 nums1 的任意排列，使其相对于 nums2 的优势最大化。
+```
+
+### 解题思路
+
+num2 优势 —— 满足 nums1[i] > nums2[i] 的索引 i 的数目
+最大化，就是让每一项相对应地大一点，但是不要大太多，那就浪费了 —— 贪心
+
+就是在 num1 中**找到**大于 num2[i] 的数中最小值放到对应的位置上，如果没有，就直接放最小的
+（有一点田忌赛马的感觉
+
+关于这个**找到**：
+
+- 可以每次找的时候二分查找 找到 num1 中对应的 i，进行 `res[i] = nums[left]`的赋值
+- 也可以直接在一开始就对 num1 进行排序，同时根据 num2 值对索引进行排序（两个都是升序排序）
+
+第二种写法比较好写，另外可以剩下 `res` 的空间，直接操作 `num2`作为答案
+
+空间复杂度 O(1),时间复杂度 O(nlogn)
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number[]}
+ */
+var advantageCount = function (nums1, nums2) {
+	const n = nums1.length;
+	const idx = new Array(n); //num2索引数组
+	for (let i = 0; i < n; i++) idx[i] = i;
+	nums1.sort((a, b) => a - b);
+	idx.sort((i, j) => nums2[i] - nums2[j]); //num2索引排序
+	let l = 0,
+		r = n - 1;
+	//从小到大拿 num1 从小到大和 num2 比
+	for (let v of nums1) {
+		if (v > nums2[idx[l]]) nums2[idx[l++]] = v;
+		//小于的情况就直接开摆，拿去和 num2 最大的比（田忌赛马）
+		else nums2[idx[r--]] = v;
+	}
+	return nums2;
+};
+```
