feat: lc 856. 括号的分数

--- a/每周的题解/12.md
+++ b/每周的题解/12.md
@@ -311,3 +311,55 @@ var advantageCount = function (nums1, nums2) {
 	return nums2;
 };
 ```
+
+## 856. 括号的分数
+
+### 题目描述
+
+```
+给定一个平衡括号字符串 S，按下述规则计算该字符串的分数：
+
+() 得 1 分。
+AB 得 A + B 分，其中 A 和 B 是平衡括号字符串。
+(A) 得 2 * A 分，其中 A 是平衡括号字符串。
+```
+
+### 解题思路
+
+已知是平衡括号了
+
+要注意的点就是第三条，内嵌时 \*2，至于内嵌了几层，可以用栈
+
+- 左括号时压入栈中
+- 右括号时计数（左括号有 n 层就是加上 `2^(n-1)`
+
+但是我发现了不对的地方，` "(()(()))"`中，后面三个右括号实际上已经计算过了 `2+4+1+1+1`，后面三个 1 是重复计算了的
+
+也就是说，我们只计算，最深处的那一个`()`。外面的不要重复计算！
+
+所以右括号计数时还要再判断一下，这里是不是最深的`()`
+
+> 另外你会发现，有栈的思想，实际上用一个计数器记录 左括号的个数即可，自己优化一下吧
+
+### 代码
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var scoreOfParentheses = function (s) {
+	const stk = [];
+	let res = 0;
+	for (let i = 0; i < s.length; i++) {
+		const c = s[i];
+		if (c === '(') {
+			stk.push(c);
+		} else if (c === ')') {
+			stk.pop();
+			if (s[i - 1] === '(') res += 1 << stk.length;
+		}
+	}
+	return res;
+};
+```
