feat: lc 801. 使序列递增的最小交换次数

--- a/每周的题解/12.md
+++ b/每周的题解/12.md
@@ -363,3 +363,84 @@ var scoreOfParentheses = function (s) {
 	return res;
 };
 ```
+
+## 801. 使序列递增的最小交换次数
+
+### 题目描述
+
+```
+我们有两个长度相等且不为空的整型数组 nums1 和 nums2 。在一次操作中，我们可以交换 nums1[i] 和 nums2[i]的元素。
+
+例如，如果 nums1 = [1,2,3,8] ， nums2 =[5,6,7,4] ，你可以交换 i = 3 处的元素，得到 nums1 =[1,2,3,4] 和 nums2 =[5,6,7,8] 。
+返回 使 nums1 和 nums2 严格递增 所需操作的最小次数 。
+
+数组 arr 严格递增 且  arr[0] < arr[1] < arr[2] < ... < arr[arr.length - 1] 。
+
+注意：
+
+用例保证可以实现操作。
+```
+
+### 解题思路
+
+> 一道看了题解才会的题目，涉及的知识点：状态机、DP。
+
+每次交换发生在两个数组的同一下标之下，并且题目保证有答案，所以当遍历到 不满足 严格递增的地方，如`num1[i-1]>=num1[i]`：
+
+- 交换 i - 1
+- 交换 i
+
+那实际上遍历到 i - 1 的时候，就对应着两个选择，交换或者不交换；
+并且这个选择是会影响到后面的 i。
+
+所以在遍历到 i 的时候，选择哪一个选项还要看 i - 1 时的选择，和后面又没啥关系，so：
+
+`dp[i][j]`表示 下标范围为`[0,i]`的数组的最小交换数， j 表示 i 位置的选择：
+
+- j === 0 表示不交换
+- j === 1 表示交换
+
+最后的答案就是 `Math.max(dp[n-1][0], dp[n-1][1])`
+
+初始化：
+
+- `f[0][0]=0`
+- `f[0][1]=1`
+
+并且在遍历过程中只有如下两种情况：
+
+- 顺序位满足要求：两个位置要么都交换，要么都不交换
+- 交叉位满足要求：两个位置只有一个交换
+
+有没有可能两个情况都满足？有，此时就选择两种情况的较小值
+
+不然是不可能满足两个数组都能变为严格递增的
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number}
+ */
+var minSwap = function (nums1, nums2) {
+	const n = nums1.length;
+	const dp = new Array(n);
+	dp[0] = [0, 1];
+	for (let i = 1; i < n; i++) dp[i] = [n + 10, n + 10];
+	for (let i = 1; i < n; i++) {
+		//顺序位满足要求
+		if (nums1[i] > nums1[i - 1] && nums2[i] > nums2[i - 1]) {
+			dp[i][0] = dp[i - 1][0]; //前后都不交换
+			dp[i][1] = dp[i - 1][1] + 1; //都交换
+		}
+		//交叉位满足要求
+		if (nums1[i] > nums2[i - 1] && nums2[i] > nums1[i - 1]) {
+			dp[i][0] = Math.min(dp[i][0], dp[i - 1][1]); //前一位交换
+			dp[i][1] = Math.min(dp[i][1], dp[i - 1][0] + 1); //当前位交换
+		}
+	}
+	return Math.min(dp[n - 1][0], dp[n - 1][1]);
+};
+```
